...
        layout="@layout/navbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:id="@+id/colorGameIcon"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:soundEffectsEnabled="false"
...
