...
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colourGameSecondTextBackground2"
        app:srcCompat="@drawable/colourgametext" />

    <TextView
        android:id="@+id/colourGameSecondText1"
        android:layout_width="169dp"
        android:layout_height="69dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:textColor="@color/font"
        android:textSize="30sp"
...
