...
    android:layout_height="match_parent"
    android:background="@color/colourgame_background">

    <include layout="@layout/colourgame_layout" />

    <ImageView
        android:id="@+id/colourGameFirstOptionBackground1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="212dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/colourGameFirstOptionBackground2"
...
