<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/chooseProfilePictureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/choose_profilepicture"
        android:textColor="@color/font"
        android:textSize="30dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/newProfilePictureBackground1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseProfilePictureText"
        app:srcCompat="@drawable/chooseprofilepicture" />

    <ImageView
        android:id="@+id/newProfilePicture1"
        android:layout_width="157dp"
        android:layout_height="176dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/newProfilePictureBackground1"
        app:layout_constraintEnd_toEndOf="@+id/newProfilePictureBackground1"
        app:layout_constraintStart_toStartOf="@+id/newProfilePictureBackground1"
        app:layout_constraintTop_toTopOf="@+id/newProfilePictureBackground1" />

    <TextView
        android:id="@+id/chooseUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/font"
        android:textSize="30dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProfilePictureBackground1" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textinputbackground"
        android:fontFamily="@font/baloo2_medium"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:paddingStart="12dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseAgeText" />

    <TextView
        android:id="@+id/chooseAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/age"
        android:textColor="@color/font"
        android:textSize="30dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textinputbackground"
        android:fontFamily="@font/baloo2_medium"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxLength="10"
        android:paddingStart="12dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseUsernameText" />

    <ImageView
        android:id="@+id/newSessionReadyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText"
        app:srcCompat="@drawable/usercreationbutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textSize="25dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:textColor="@color/font"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/newSessionReadyButton"
        app:layout_constraintEnd_toEndOf="@+id/newSessionReadyButton"
        app:layout_constraintStart_toStartOf="@+id/newSessionReadyButton"
        app:layout_constraintTop_toTopOf="@+id/newSessionReadyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>