...
        app:layout_constraintBottom_toBottomOf="@+id/newProfilePictureBackground2"
        app:layout_constraintEnd_toEndOf="@+id/newProfilePictureBackground2"
        app:layout_constraintStart_toStartOf="@+id/newProfilePictureBackground2"
        app:layout_constraintTop_toTopOf="@+id/newProfilePictureBackground2" />

    <ImageView
        android:id="@+id/profilePictureOption1"
        android:layout_width="71dp"
        android:layout_height="80dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProfilePictureBackground2"
...

    <ImageView
        android:id="@+id/profilePictureOption8"
        android:layout_width="71dp"
        android:layout_height="80dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toStartOf="@+id/profilePictureOption9"
        app:layout_constraintStart_toEndOf="@+id/profilePictureOption7"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureOption5"
        app:srcCompat="@drawable/slothprofilepicture" />

    <ImageView
        android:id="@+id/profilePictureOption9"
...
