<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF3EC">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/font"
        android:textSize="35dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/font"
        android:textSize="35dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <TextView
        android:id="@+id/currentXpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/font"
        android:textSize="25dp"
        android:soundEffectsEnabled="false"
        android:layoutDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelText" />

    <ImageView
        android:id="@+id/profilePictureBackground"
        android:layout_width="221dp"
        android:layout_height="240dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepicture" />

    <ImageView
        android:id="@+id/newProfilePicture1"
        android:layout_width="157dp"
        android:layout_height="176dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/profilePictureBackground"
        app:layout_constraintEnd_toEndOf="@+id/profilePictureBackground"
        app:layout_constraintStart_toStartOf="@+id/profilePictureBackground"
        app:layout_constraintTop_toTopOf="@+id/profilePictureBackground" />

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/homeicon" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        app:srcCompat="@drawable/profileicon" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/settingsicon" />

</androidx.constraintlayout.widget.ConstraintLayout>