...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/profilepicture" />

    <ImageView
        android:id="@+id/newProfilePictureNavbar"
        android:layout_width="58dp"
        android:layout_height="65dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/profilePictureBackground"
        app:layout_constraintEnd_toEndOf="@+id/profilePictureBackground"
        app:layout_constraintStart_toStartOf="@+id/profilePictureBackground"
...
